--- a/content/posts/2005/07/hadows-2005-07.md
+++ b/content/posts/2005/07/hadows-2005-07.md
@@ -1,9 +1,9 @@
 ---
 title: "Hadows 2005.7"
-slug: "hadows-200507"
+slug: "hadows-2005-07"
 date: "2005-07-22T19:38:36+09:00"
 draft: false
-categories: ['CDレビュー']
+categories: ['ライブ']
 tags: ['Hadows']
 ---
 2周年記念でチャージが半額になっているせいかやたら人が多い。
