--- a/content/posts/2005/07/hadows-2005-07.md
+++ b/content/posts/2005/07/hadows-2005-07.md
@@ -3,8 +3,14 @@ title: "Hadows 2005.7"
 slug: "hadows-2005-07"
 date: "2005-07-22T19:38:36+09:00"
 draft: false
-categories: ['ライブ']
-tags: ['Hadows']
+categories:
+  - Live
+  - Jazz
+tags:
+  - Hadows
+artists:
+  - Tommy Campbell
+image: /images/20050722f.jpg
 ---
 2周年記念でチャージが半額になっているせいかやたら人が多い。
 <!--more-->
@@ -12,4 +18,4 @@ tags: ['Hadows']
 そうはいっても主役はホーンになる。
 そうわれらが[ミッチー](http://homepage2.nifty.com/altosax/)だった。 
 小林さんが出るときはジャズらしいジャズをやる。 
-恒例のハッピーバースデーは私の大好きな「.I'll Close My Eyes」だった。 すごく偶然にもこの日誕生日を祝ってもらった友人に私が送ったCDの１曲目だった。 ![20050722f.jpg](/wp-content/archives/20050722f.jpg)
+恒例のハッピーバースデーは私の大好きな「.I'll Close My Eyes」だった。 すごく偶然にもこの日誕生日を祝ってもらった友人に私が送ったCDの１曲目だった。
