--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -27,6 +27,13 @@ other = "カテゴリー一覧"
 one = "カテゴリー"
 other = "{{ .Count }} カテゴリー"
 
+[allArtists]
+other = "全てのアーティスト"
+
+[artist]
+one = "アーティスト"
+other = "{{ .Count }} アーティスト"
+
 [article]
 one = "1 記事"
 other = "{{ .Count }} 記事"
